--- a/test/style.css
+++ b/test/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=B612+Mono&family=Courier+Prime&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono&family=Courier+Prime&display=swap');
 *{
   margin: 0;
   padding: 0;
@@ -533,13 +533,13 @@ border-bottom: 1px groove;
 .awayEvent{
   text-align: right;
   border-bottom: 1px solid #afa6a6;
-  font-family: 'B612 Mono', monospace;
+  font-family: 'Azeret Mono', monospace;
 
 }
 
 .homeEvent {
   border-bottom: 1px solid #afa6a6;
-  font-family: 'B612 Mono', monospace;
+  font-family: 'Azeret Mono', monospace;
 
 }
 
