--- a/test/style.css
+++ b/test/style.css
@@ -552,3 +552,11 @@ border-bottom: 1px groove;
   margin-left: 5px;
   margin-right: 8px;
 }
+
+.sub {
+  width: 15px;
+    float: left;
+    margin-right: 6px;
+    margin-top: 5.1px;
+    margin-left: 7px;
+}
