--- a/test/style.css
+++ b/test/style.css
@@ -533,6 +533,7 @@ border-bottom: 1px groove;
     display: inline-block;
     font-size: 15px;
     font-weight: 200;
+    margin-left: 7px;
 }
 
 .ball {
