--- a/test/style.css
+++ b/test/style.css
@@ -528,12 +528,13 @@ border-bottom: 1px groove;
 
 .light {
   color: #999999;
-    font-family: 'Azeret Mono', monospace;
-    word-spacing: -9px;
-    display: inline-block;
-    font-size: 15px;
-    font-weight: 200;
-    margin-left: 7px;
+  font-family: 'Azeret Mono', monospace;
+  word-spacing: -9px;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 200;
+  margin-left: 7px;
+  margin-right: 7px;
 }
 
 .ball {
