--- a/test/style.css
+++ b/test/style.css
@@ -545,9 +545,8 @@ border-bottom: 1px groove;
   margin-left: 5px;
 }
 
-.ballaway {
+.ballFloat {
   width: 18px;
-  float: left;
   margin-right: 6px;
   margin-top: 2.1px;
   margin-left: 5px;
