--- a/test/style.css
+++ b/test/style.css
@@ -558,6 +558,7 @@ border-bottom: 1px groove;
   border-bottom: 1px solid #afa6a6;
   font-family: 'Azeret Mono', monospace;
   word-spacing: -9px;
+  line-height: 20px;
 
 
 }
@@ -566,6 +567,7 @@ border-bottom: 1px groove;
   border-bottom: 1px solid #afa6a6;
   font-family: 'Azeret Mono', monospace;
   word-spacing: -9px;
+  line-height: 20px;
 
 }
 
