--- a/style.css
+++ b/style.css
@@ -1,10 +1,25 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono&family=Courier+Prime&display=swap');
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 } 
+
+.hideThis {
+  visibility: hidden;
+}
+
+#cover 
+{position: fixed; height: 100%; width: 100%; top:0; left: 0; background: #000; z-index:9999;}
+
+html,body {
+  height: 100%;
+}
+body {
+  background-color: #58cb47;
+}
 nav{
   display: flex;
   height: 60px;
@@ -114,79 +129,511 @@ input[type="checkbox"]{
   font-size: 40px;
   font-weight: 700;
 }
-body {
-    margin: 0;
+
+.parentDiv:hover{
+  background-color: #e8e8e8;
+}
+.parentDiv {
+width: 450px;
+text-align: center;
+background-color: #f4f4f4;
+border-bottom: 1px groove;
+}
+.league{
+  font-size: large;
+  font-weight: 700;
+  background-color: #e8e8e8;
+  border-bottom: 1px groove;
+  box-sizing: border-box;
+  text-align: left;
+  padding-left: 10px;
+  font-size: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+.flag{
+  border: 1px solid #585858;
+  border-radius: 9px;
+  height: 19px;
+  float: right;
+  margin-top: 2px;
+  margin-right: 2px;
+}
+.status{
+  float: left;
+  margin-left: 10px;
+  margin-top: 12px;
+  border-right: 1px solid #cbcbcb;
+  padding-right: 8px;
+}
+.team1 {
+  float: left;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: baseline;
+  margin-left: 10px;
 }
 
-.banner{
-    background-color: #48f756;
-    padding: 10px;
+.score1 {
+  margin-left: 419px;
 }
 
-.wg-api-football-fixtures{
-    align-items: center;
-    margin: 0 auto;
-    padding-top: 10px;
-    white-space: nowrap;
-}
- .banner__header{
-    white-space: nowrap;
+.team2 {
+  float: left;
+  margin-left: 10px;
 }
 
-.banner__header > h1 {
-  width: 200px;
-  display: inline-block;
+
+.score2 {
+  margin-left: 419px; 
 }
-.cs{
-    background-color: black;
-    display: inline-block;
-  }
-#scoreaxis-widget-eac96 {
-  display: inline-block;
-  }
 
-.webname, .webname:hover, .webname:focus, .webname:active {
-    text-decoration: none;
-    color: #f2f2f2;
-    transition: all 0.3s ease;
-  }
+.winner {
+  font-weight: 500;
+  color: rgb(34, 33, 33);
+}
 
+.loser{
+  font-weight: 300;
+  opacity: 70%;
+}
 
+.hide{
+  opacity: 0;
+}
 
+.live {
+  color: #f75959;
+}
 
-  /* Place the navbar at the bottom of the page, and make it stick */
-.bnavbar {
-  background-color: #333;
-  overflow: hidden;
-  position: fixed;
-  bottom: 0;
+#wrapper {
+  clear: both;
   width: 100%;
-  height: 20px;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 33.2rem 28.260000000000005rem 35rem;
+  justify-content: center;
 }
-
-/* Style the links inside the navigation bar */
-.bnavbar a {
+#left {
+  background-color: #ffffff;
+    width: 475px;
+    float: left;
+    margin-left: 57px;
+    height: 100%;
+    border-left: 1px groove;
+}
+.parentContainer {
   float:left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 181.3px;
-  text-decoration: underline;
-  font-size: 10px;
+  background-color: white;
+  border-top: 1px groove;
+  border-left: 1px groove;
+  border-right: 1px groove;
+}
+#right {
+  background-color: #ffffff;
+  width: 475px;
+  float: left;
+  margin-right: 30px;
+  background-color: white;
+  border-right: 1px groove;
 }
 
-/* Add a color to the active/current link */
-.bnavbar a.active {
-  background-color: #000000;
-  color: rgb(255, 255, 255);
-  position: relative;
-  top: -12px;
-  width: 33.33333333333333%;}
+.newsimg {
+  width: auto;
+  max-width: 25%;
+  height: auto;
+  margin-left: 10px;
+  margin-top: 7px;
+  float: left;
+  margin-right: 2px;
+  border: 2px solid black;
+  border-radius: 6px;
+  margin-bottom: 8px;
+  height: 120px;
+}
+
+
+.addborder {
+  border-top: 1px groove;
+  border-left: 1px groove;
+}
+
+.innerText{
+  text-align: center;
+  padding-top: 17px;
+  
+  font-size: 15px;
+}
+
+.newsel {
+  height: 136px;
+  background-color: white;
+}
+
+.roundedBar {
+  border-top: 3px solid #e3e3e3;
+  border-radius: 217px;
+  width: 90%;
+  margin-left: 22px;
+  margin-top: 10px;
+}
+
+.square {
+    object-fit: cover;
+    width:120px;
+    height:120px;
+}
+
+.imgcont {
+  height: 132px;
+}
+
+.linkDiv{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.blueLink {
+  color: rgb(0, 187, 255);
+}
+
+.hiddenMain {
+  display: none;
+}
+
+.fixture {
+  display: inline-block;
+}
+
+.rightDiv {
+  text-align: center;
+  overflow: hidden; 
+  background: #696969;
+  color: white;
+}
+.rightDivScores {
+  text-align: center;
+  overflow: hidden; 
+  padding-top: 18px;
+  padding-bottom: 18px;
+  background: #c9c9c9;
+}
+
+.rightBar {
+  font-weight: 700;
+  background-color: #e8e8e8;
+  border-bottom: 1px groove;
+  box-sizing: border-box;
+  text-align: left;
+  padding-left: 10px;
+  font-size: 15px;
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px groove;
+}
+
+.logo1 {
+  height: 70px;
+  width: 70px;
+  display: inline-block;
+  box-shadow: 0px 3px 50px rgb(0 0 0 / 20%);
+  border: 1px solid lightgray;
+  border-radius: 20px;
+}
+
+.fixturel {
+  display: inline;
+}
+
+.fixturer { 
+  display: inline;
+}
+
+.timer{
+  display: inline-block;
+  margin-left: 40px;
+  margin-right: 40px;
+  font-size: 35px;
+  font-weight: 200;
+  font-family: 'Courier Prime', monospace;
+  margin-top: 20px;
+  vertical-align: top;
+}
+.statsButton{
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-top: 9px;
+  padding-bottom: 9px;
+  background: #c9c9c9;
+    border: 2px solid #a0a0a0;
+    border-radius: 42px;
+}
+
+.statsButton:hover{
+  background: #ffffff;
+  color: black;
+  transition: all 0.3s ease;
+  border-radius: 45px;
+  box-shadow: 0px 3px 50px rgb(0 0 0 / 20%);
+
+}
+
+.eventsButton {
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-top: 9px;
+  padding-bottom: 9px;
+  background: #c9c9c9;
+    border: 2px solid #a0a0a0;
+    border-radius: 42px;
+}
+
+.eventsButton:hover{
+  background: #ffffff;
+  color: black;
+  transition: all 0.3s ease;
+  border-radius: 45px;
+  box-shadow: 0px 3px 50px rgb(0 0 0 / 20%);
+  transition: all 0.3s ease;
+
+}
+
+.infoButton {
+  padding-left: 32px;
+  padding-right: 26px;
+  padding-top: 9px;
+  padding-bottom: 9px;
+  background: #c9c9c9;
+    border: 2px solid #a0a0a0;
+    border-radius: 42px;
+}
+
+.infoButton:hover{
+  background: #ffffff;
+  color: black;
+  transition: all 0.3s ease;
+  border-radius: 45px;
+  box-shadow: 0px 3px 50px rgb(0 0 0 / 20%);
+  transition: all 0.3s ease;
+
+}
+
+.lineupButton {
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-top: 9px;
+  padding-bottom: 9px;
+  background: #c9c9c9;
+    border: 2px solid #a0a0a0;
+    border-radius: 42px;
+}
+
+.lineupButton:hover{
+  background: #ffffff;
+  color: black;
+  transition: all 0.3s ease;
+  border-radius: 45px;
+  box-shadow: 0px 3px 50px rgb(0 0 0 / 20%);
+  transition: all 0.3s ease;
+
+}
+
+.navbarMini {
+  background: #c9c9c9;
+  padding: 0px;
+  flex-wrap: nowrap;
+  box-shadow: 0px 3px 50px rgb(0 0 0 / 20%);
+  padding: 7px;
+}
+
+.clicked {
+    background: #ffffff;
+    color: black;
+    transition: all 0.3s ease;
+    border-radius: 45px;
+    box-shadow: 0px 3px 50px rgb(0 0 0 / 20%);
+    transition: all 0.3s ease;
+}
+
+.referee {
+  
+  margin-left: 12px;
+}
+.venue {
+  
+  margin-left: 12px;
+}
+.city {
+  
+  margin-left: 12px;
+}
+
+.lineupParentAway {
+  text-align: right;
+}
+
+.lineupC {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 12px;
+}
+
+.lineupC>.lineupParentHome {
+  width: 50%;
+}
+
+.lineupC>.lineupParentAway {
+  width: 50%;
+}
+
+.statsC {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 12px;
+}
+
+
+.statsC>div{
+  width: 33.3333333333333333333333333333333333333333333333333333333%;
+  border-bottom: 1px solid #afa6a6;
+}
+
+.awayStats {
+  text-align: right;
+}
+
+.statName {
+  text-align: center;
+}
+
+.startEleven {
+    display: flex;
+    font-weight: 600;
+    justify-content: space-evenly;
+}
+
+.fixtureInfo {    
+  display: flex;
+  font-weight: 600;
+  justify-content: space-evenly;
+}
+
+
+.light {
+  color: #999999;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 200;
+  margin-left: 7px;
+  margin-right: 7px;
+}
 
 .ball {
-    width: 18px;
-    float: left;
+  width: 18px;
+  float: left;
+  margin-right: 6px;
+  margin-left: 5px;
+}
+
+.ballFloat {
+  width: 18px;
+  margin-right: 6px;
+  margin-left: 5px;
+  float: right;
+}
+
+.awayEvent{
+  text-align: right;
+  border-bottom: 1px solid #afa6a6;
+  line-height: 20px;
+  margin-top: 3px;
+
+
+}
+
+.homeEvent {
+  border-bottom: 1px solid #afa6a6;
+
+  line-height: 20px;
+  margin-top: 3px;
+
+}
+
+.card {
+  margin-top: -3px;
+  display: inline-block;
+  margin-left: 5px;
+  margin-right: 8px;
+}
+
+.cardFloat {
+  margin-top: -3px;
+  margin-left: 5px;
+  margin-right: 8px;
+  float: right;
+  margin-left: 9px;
+}
+
+.sub {
+  width: 20px;
+  float: left;
+  margin-right: 6.5px;
+  margin-left: 3px;
+}
+
+.subFloat {
+  width: 20px;
+  float: right;
+  margin-right: 6px;
+  margin-left: 7px;
+
+}
+
+.eventsC {
+  display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    margin-top: 7px;
+}
+
+.penFloat {
+  float: right;
+  margin-left: 4px;
+  margin-right: 6px;
+}
+
+.pen {
+  margin-left: 4px;
+  margin-right: 6px;
+float: left;
+}
+
+  .og {
+    min-width: 16px;
+    display: inline-block;
+    fill: #db6767;
+    vertical-align: middle;
+    margin-left: 3px;
     margin-right: 6px;
-    margin-top: 2.1px;
-    margin-left: 5px;
+    width: 23px;
+    height: 21px;
+  }
+
+  .penMiss {
+    margin-left: 3.5px;
+    margin-right: 5px;
+    float: left;
+  }
+
+  .penMissFloat {
+    margin-left: 3.5px;
+    margin-right: 5px;
+    float: right;
   }
