--- a/style.css
+++ b/style.css
@@ -584,7 +584,7 @@ border-bottom: 1px groove;
 .sub {
   width: 20px;
   float: left;
-  margin-right: 6.5px;
+  margin-right: 3.5px;
   margin-left: 3px;
 }
 
@@ -600,6 +600,7 @@ border-bottom: 1px groove;
   display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    padding: 11px;
     margin-top: 7px;
 }
 
@@ -636,4 +637,9 @@ float: left;
     margin-left: 3.5px;
     margin-right: 5px;
     float: right;
+  }
+
+  .webname {
+    color: white;
+    text-decoration: none;
   }
