--- a/style.css
+++ b/style.css
@@ -344,6 +344,7 @@ border-bottom: 1px groove;
   box-shadow: 0px 3px 50px rgb(0 0 0 / 20%);
   border: 1px solid lightgray;
   border-radius: 20px;
+  object-fit: cover;
 }
 
 .fixturel {
