--- a/style.css
+++ b/style.css
@@ -261,8 +261,7 @@ border-bottom: 1px groove;
 
 .innerText{
   text-align: center;
-  padding-top: 17px;
-  
+  padding-right: 14px;  
   font-size: 15px;
 }
 
