--- a/test/style.css
+++ b/test/style.css
@@ -1,119 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono&family=Courier+Prime&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-} 
-
-.hideThis {
-  visibility: hidden;
-}
-
-#cover 
-{position: fixed; height: 100%; width: 100%; top:0; left: 0; background: #000; z-index:9999;}
-
-html,body {
-  height: 100%;
-}
-body {
-  background-color: #58cb47;
-}
-nav{
-  display: flex;
-  height: 60px;
-  width: 100%;
-  background: #76e56b;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 50px 0 100px;
-  flex-wrap: wrap;
-  margin-bottom: 10px;
-}
-nav .logo{
-  color: #fff;
-  font-size: 35px;
-  font-weight: 600;
-}
-nav ul{
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-}
-nav ul li{
-  margin: 0 5px;
-}
-nav ul li a{
-  color: #f2f2f2;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: 500;
-  padding: 8px 15px;
-  border-radius: 5px;
-  letter-spacing: 1px;
-  transition: all 0.3s ease;
-}
+*{margin: 0; padding: 0;box-sizing: border-box;font-family: 'Poppins', sans-serif;} 
+.hideThis {visibility: hidden;}
+#cover {position: fixed; height: 100%; width: 100%; top:0; left: 0; background: #000; z-index:9999;}
+html,body {height: 100%;}
+body {background-color: #58cb47;}
+/* Navbar */
+nav{display: flex;height: 60px;width: 100%;background: #76e56b;align-items: center;justify-content: space-between;padding: 0 50px 0 100px;flex-wrap: wrap;margin-bottom: 10px;}
+nav .logo{color: #fff;font-size: 35px;font-weight: 600;}
+nav ul{display: flex;flex-wrap: wrap;list-style: none;}
+nav ul li{margin: 0 5px;}
+nav ul li a{color: #f2f2f2;text-decoration: none;font-size: 18px;font-weight: 500;padding: 8px 15px;border-radius: 5px;letter-spacing: 1px;transition: all 0.3s ease;}
 nav ul li a.active,
-nav ul li a:hover{
-  color: #111;
-  background: #fff;
-}
-nav .menu-btn i{
-  color: #fff;
-  font-size: 22px;
-  cursor: pointer;
-  display: none;
-}
-input[type="checkbox"]{
-  display: none;
-}
-@media (max-width: 1000px){
-  nav{
-    padding: 0 40px 0 50px;
-  }
-}
-@media (max-width: 920px) {
-  nav .menu-btn i{
-    display: block;
-  }
-  #click:checked ~ .menu-btn i:before{
-    content: "\f00d";
-  }
-  nav ul{
-    position: fixed;
-    top: 80px;
-    left: -100%;
-    background: #111;
-    height: 100vh;
-    width: 100%;
-    text-align: center;
-    display: block;
-    transition: all 0.3s ease;
-  }
-  #click:checked ~ ul{
-    left: 0;
-  }
-  nav ul li{
-    width: 100%;
-    margin: 40px 0;
-  }
-  nav ul li a{
-    width: 100%;
-    margin-left: -100%;
-    display: block;
-    font-size: 20px;
-    transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  }
-  #click:checked ~ ul li a{
-    margin-left: 0px;
-  }
-  nav ul li a.active,
-  nav ul li a:hover{
-    background: none;
-    color: cyan;
-  }
-}
+nav ul li a:hover{color: #111;background: #fff;}
+nav .menu-btn i{color: #fff;font-size: 22px;cursor: pointer;display: none;}
+input[type="checkbox"]{display: none;}
+@media (max-width: 1000px){nav{padding: 0 40px 0 50px;}}
+@media (max-width: 920px) {nav .menu-btn i{display: block;}#click:checked ~ .menu-btn i:before{content: "\f00d";}nav ul{position: fixed;top: 80px;left: -100%;background: #111;height: 100vh;width: 100%;text-align: center;display: block;transition: all 0.3s ease;}#click:checked ~ ul{left: 0;}nav ul li{width: 100%;margin: 40px 0;}nav ul li a{width: 100%;margin-left: -100%;display: block;font-size: 20px;transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);}#click:checked ~ ul li a{margin-left: 0px;}nav ul li a.active,nav ul li a:hover{background: none;color: cyan;}}
+
 .content{
   position: absolute;
   top: 50%;
@@ -162,8 +66,7 @@ border-bottom: 1px groove;
 .status{
   float: left;
   margin-left: 10px;
-  margin-top: 12px;
-  border-right: 1px solid #cbcbcb;
+  margin-top: 2px;
   padding-right: 8px;
 }
 .team1 {
@@ -251,6 +154,7 @@ border-bottom: 1px groove;
   border-radius: 6px;
   margin-bottom: 8px;
   height: 120px;
+  object-fit: cover;
 }
 
 
@@ -261,9 +165,17 @@ border-bottom: 1px groove;
 
 .innerText{
   text-align: center;
-  padding-top: 17px;
+    padding-right: 5px;
+    font-size: 15px;
+    display: flex;
+    
+    flex-direction: column;
+    line-height: 20px;
   
-  font-size: 15px;
+}
+
+.innerText>strong{
+  margin-top: 24px;
 }
 
 .newsel {
@@ -276,7 +188,7 @@ border-bottom: 1px groove;
   border-radius: 217px;
   width: 90%;
   margin-left: 22px;
-  margin-top: 10px;
+
 }
 
 .square {
@@ -344,6 +256,7 @@ border-bottom: 1px groove;
   box-shadow: 0px 3px 50px rgb(0 0 0 / 20%);
   border: 1px solid lightgray;
   border-radius: 20px;
+  object-fit: cover;
 }
 
 .fixturel {
@@ -360,8 +273,7 @@ border-bottom: 1px groove;
   margin-right: 40px;
   font-size: 35px;
   font-weight: 200;
-  font-family: 'Courier Prime', monospace;
-  margin-top: 20px;
+  margin-top: 10px;
   vertical-align: top;
 }
 .statsButton{
@@ -644,4 +556,30 @@ float: left;
   .webname {
     color: white;
     text-decoration: none;
+  }
+
+  .timeDiv {
+    float: left;
+    border-right: 1px solid #cbcbcb;
+    line-height: 15px;
+    margin-left: 8px;
+    margin-top: 7px;
+    padding-right: 10px;
+  }
+
+  .gameTime {
+    font-size: 12px;
+    color: #5f5f5f;
+  }
+
+  .var {
+    margin: 0px 4.5px;
+    float: left;
+    fill: #0f6dd0;
+  }
+
+  .varRight {
+    margin: 0px 4.5px;
+    float: right;
+    fill: #0f6dd0;
   }
