--- a/test/style.css
+++ b/test/style.css
@@ -34,6 +34,10 @@ input[type="checkbox"]{display: none;}
   font-weight: 700;
 }
 
+.activeDiv {
+
+}
+
 .parentDiv:hover{
   background-color: #e8e8e8;
 }
