--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ border-bottom: 1px groove;
     padding-right: 5px;
     font-size: 15px;
     display: flex;
-    
+    font-weight: 200;
     flex-direction: column;
     line-height: 20px;
   
