--- a/livestreams/style.css
+++ b/livestreams/style.css
@@ -169,3 +169,8 @@ input[type="checkbox"]{
   color: black;
 }
 
+.streamlist>h1 {
+  font-size: 30px;
+  color: #49b4f5;
+  text-decoration: none;
+}
