--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ border-bottom: 1px groove;
   margin-top: 7px;
   float: left;
   margin-right: 2px;
-
+  box-shadow: 0px 10px 15px rgb(0 0 0 / 60%);
   border: 2px solid #61b300; 
   border-radius: 6px;
   margin-bottom: 8px;
