--- a/livestreams/style.css
+++ b/livestreams/style.css
@@ -173,3 +173,12 @@ a, .games, .games:hover, .games:focus, .games:active {
 a:hover {
   color: #39aa52;
 }
+
+.safety{
+ font-size: 22px;
+}
+
+.safetyText{
+  font-size: 15px;
+  font-weight: 300;
+}
